# ChangeLog for portage-postsyncd-mv

*portage-postsyncd-mv-5.1.1:
	Martin Väth <martin at mvath.de>:
	- Introduce POSTSYNC_RSYNC_EXTRA_OPTS and let it default to -c

*portage-postsyncd-mv-5.1.0:
	Martin Väth <martin at mvath.de>:
	- Skip cache fetching with rsync based on checksum

*portage-postsyncd-mv-5.0.2:
	Martin Väth <martin at mvath.de>:
	- Replace "git status" by "git udpate-index --refresh -q --unmerged"
	  which is the for us important part which "git status" does internally
	  https://bugs.gentoo.org/show_bug.cgi?id=552814#c43

*portage-postsyncd-mv-5.0.1:
	Martin Väth <martin at mvath.de>:
	- Use git reset --merge again, but preceed by git status:
	  See https://bugs.gentoo.org/show_bug.cgi?id=552814#c38

*portage-postsyncd-mv-5.0.0:
	Martin Väth <martin at mvath.de>:
	- Never attempt git merging; use always git reset --hard
	- Introduce *_RETRY_* and *_KEEP_* for git error handling and
	  support for automatic directory removal

*portage-postsyncd-mv-4.4.0:
	Martin Väth <martin at mvath.de>:
	- Flatten repository's directory structure
	- eclasses.usage: Handle VERSION workaround correctly

*portage-postsyncd-mv-4.3.5:
	Martin Väth <martin at mvath.de>:
	- Fix git update failure (regression from 4.3.3)

*portage-postsyncd-mv-4.3.4:
	Martin Väth <martin at mvath.de>:
	- Handle export Bourne shell compatible

*portage-postsyncd-mv-4.3.3:
	Martin Väth <martin at mvath.de>:
	- Avoid git pull breakage with limited depth

*portage-postsyncd-mv-4.3.2:
	Martin Väth <martin at mvath.de>:
	- Avoid LC_COLLATE problems

*portage-postsyncd-mv-4.3.1:
	Martin Väth <martin at mvath.de>:
	- eclasses.usage: fix catdir->catfile

*portage-postsyncd-mv-4.3.0:
	Martin Väth <martin at mvath.de>:
	- eclasses.usage: use File::Which if available

*portage-postsyncd-mv-4.2.3:
	Martin Väth <martin at mvath.de>:
	- eclasses.usage: support "man" arg, force utf8 encoding
	- eclasses.usage: internal: Check require at compile time. Fix use

*portage-postsyncd-mv-4.2.2: